fixing some things

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allincare | Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="./assets/css/cadastro.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sarala&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div class="header">
         <div class="container">
 
-            <img src="./logo.png" class="logo">
+            <img src="./assets/imgs/logo.png" class="logo">
             <ul class="navbar">
                 <li><a class="navbar_btn" href="home.html">Início</a></li>
                 <li><a class="navbar_btn" href="simule.html">Simulador</a></li>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="img_cadastro">
-                <img src="./Rectangle 69.png">
+                <img src="./assets/imgs/Rectangle 69.png">
             </div>
         </div>
 </div>
@@ -74,15 +74,15 @@
     
     <div class="icons">
         <a class="facebook" href="https://www.facebook.com/Allincare-113634227988744"> 
-            <img src="./facebook_img.png">
+            <img src="./assets/imgs/facebook_img.png">
         </a>
 
         <a class="instagram" href="https://www.instagram.com/allincarecontroltech/">
-            <img src="./instagram_img.png">
+            <img src="./assets/imgs/instagram_img.png">
         </a>
 
         <a class="linkedin" href="https://www.linkedin.com/company/allincare">
-            <img src="./linkedin_img.png">
+            <img src="./assets/imgs/linkedin_img.png">
         </a>
         </div>
     
