--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allincare | Home</title>
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/footer2.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer blue">
 
         <div>
             <h4>Copyright &copy; 2022 Allincare. Todos os direitos reservados.</h4> 
