--- a/tecnologia.html
+++ b/tecnologia.html
@@ -8,7 +8,7 @@
     <title>Allincare | Home</title>
     <link rel="stylesheet" href="./assets/css/tecnologia.css">
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/footer2.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sarala&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
     </div>
 
 
-    <div class="footer">
+    <div class="footer blue">
 
         <div>
             <h4>Copyright &copy; 2022 Allincare. Todos os direitos reservados.</h4> 
